# jetracerWork

./: .gitmodules  frames_2026-01-24_15.53.49.gv  pcb_test_log.txt  tmpclaude-4e15-cwd  usefulcmd.txt
install/: local_setup.sh  setup.sh
install/jetracer/share/jetracer/: package.bash  package.zsh
install/jetracer_ros2/share/jetracer_ros2/: package.bash  package.zsh
jetracer_ros2/: .gitignore  CMakeLists.txt  DEBUGGING_GUIDE.md  MIGRATION_SUMMARY.md  README.md  package.xml
jetracer_ros2/config/: amcl_params.yaml  jetracer.yaml  laser_filter_params.yaml  nav2_params.yaml  nav2_view.rviz  slam_toolbox_params.yaml
jetracer_ros2/config/cartographer/: jetracer.lua
jetracer_ros2/launch/: amcl.launch.py  calibrate_linear.launch.py  cartographer.launch.py  csi_camera.launch.py  hector.launch.py  jetracer.launch.py  laser_filter.launch.py  lidar.launch.py  nav.launch.py  slam.launch.py  slam_nav.launch.py  slam_toolbox.launch.py
jetracer_ros2/maps/: carto_savemap.sh  savemap.sh
jetracer_ros2/scripts/: calibrate_linear.py  csi_camera_node.py  motor_test.py  multipoint_nav.py  odom_ekf.py  pcb_signal_test.py  test_jetcam.py  web_camera_stream.py
jetracer_ros2/scripts/client_tools/: client_data_collector.py
jetracer_ros2/src/: jetracer.cpp
log/: latest_build
