<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetracer</name>
  <version>0.0.0</version>
  <description>The jetracer package for ROS 2</description>

  <maintainer email="jetbot@todo.todo">jetbot</maintainer>
  
  <!-- Using Apache 2.0 as recommended for new ROS 2 projects/migrations where possible -->
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- SLAM Dependencies -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  
  <!-- Navigation Dependencies -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  
  <!-- Visualization -->
  <exec_depend>visualization_msgs</exec_depend>
  
  <!-- Localization -->
  <exec_depend>robot_localization</exec_depend>
  
  <!-- Sensor Processing -->
  <exec_depend>laser_filters</exec_depend>
  
  <!-- Camera (custom node using OpenCV+GStreamer, no extra apt packages needed) -->
  <!-- Python deps: opencv (pre-installed on Jetson), PyYAML, sensor_msgs -->
  
  <!-- LiDAR Driver -->
  <exec_depend>rplidar_ros</exec_depend>

  <!-- Note: dynamic_reconfigure is not included as it is replaced by ROS 2 parameters -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
